--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,12 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>2.4.0</version>
+				<version>2.2.0</version>
+				<configuration>
+					<deploy.projectId>ozeronews</deploy.projectId>
+					<deploy.version>20210610t183813</deploy.version>
+					<deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
