--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ upload.path=/Users/Denis/uploads
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql:///ozerodb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
+spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
 spring.datasource.username=root
 spring.datasource.password=19ozero96
 
