--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port = 8080
+#server.port = 8080
 #website.baseURL=http://localhost:8080/
 website.baseURL=https://ozeronews.appspot.com/
 website.name=Ozero News
 company.name=Ozero Media
 
-article.collection.schedule=1800000
+article.collection.schedule=900000
 article.collection.count=5
 article.archive.day=2
 
