--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -8,5 +8,12 @@ handlers:
   - url: /.*
     script: this field is required, but ignored
 
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 4
+  disk_size_gb: 10
+
 beta_settings:
   cloud_sql_instances: ozeronews:europe-north1:ozerodb
