--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,18 @@
 	<description>Project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+
+		<!-- App Engine currently supports Java 11 -->
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jetty.version>9.4.35.v20201120</jetty.version>
+
+		<!-- Project-specific properties -->
+		<!--<exec.mainClass>io.happycoding.ServerMain</exec.mainClass>-->
+		<googleCloudProjectId>ozeronews</googleCloudProjectId>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
