--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port = 8080
+server.port=8080
 #website.baseURL=http://localhost:8080/
 website.baseURL=https://ozeronews.appspot.com/
 website.name=Ozero News
