--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<maven.compiler.source>8</maven.compiler.source>
 		<maven.compiler.target>8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jetty.version>9.4.35.v20201120</jetty.version>
+		<!--<jetty.version>9.4.35.v20201120</jetty.version>-->
 
 		<!-- Project-specific properties -->
 		<!--<exec.mainClass>io.happycoding.ServerMain</exec.mainClass>-->
