--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+			<!-- protobuf-java:2.6.0 included by MySQL Connector J
+				is not compatible with Google Cloud Java libraries. -->
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -165,6 +173,7 @@
 			<artifactId>spring-cloud-gcp-starter</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.google.cloud</groupId>
 			<artifactId>spring-cloud-gcp-security-iap</artifactId>
