--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 
+
+spring.cloud.gcp.sql.instance-connection-name=ozeronews:europe-north1:ozerodb
+spring.cloud.gcp.sql.database-name=ozeronewsdb
 # == Data Base configuration ==
 
 # -- Session control --
