--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,16 @@
 		-->
 		<dependency>
 			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-core</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-autoconfigure</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter</artifactId>
 			<version>2.0.2</version>
 		</dependency>
