--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -18,8 +18,8 @@ resources:
   memory_gb: 4
   disk_size_gb: 10
 
-health_check:
-  enable_health_check: True
+#health_check:
+#  enable_health_check: False
 
 #env_variables:
 #  ENCRYPT_KEY: your_encryption_key_here
