--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -9,7 +9,7 @@ runtime_config:
 handlers:
   - url: /.*
     script: this field is required, but ignored
-    secure: always
+#    secure: always
 
 manual_scaling:
   instances: 1
