--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ company.name=Ozero Media
 
 article.collection.schedule=900000
 article.collection.count=5
-article.archive.day=2
+article.archive.day=10
 
 upload.path=/Users/Denis/uploads
 
@@ -14,10 +14,10 @@ upload.path=/Users/Denis/uploads
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
+spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
 spring.datasource.username=root
-spring.datasource.password=19ozero96
+spring.datasource.password=20casystems19
 
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
