--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ upload.path=/Users/Denis/uploads
 #spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
 spring.datasource.username=root
-spring.datasource.password=20casystems19
+#spring.datasource.password=20casystems19
+spring.datasource.password=19ozero96
 
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
