--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-server.http.port=8080
-server.port=8443
+#server.http.port=8080
+#server.port=8443
 
-#server.port=8080
+server.port=8080
 #website.baseURL=http://localhost:8080/
 website.baseURL=https://ozeronews.appspot.com/
 website.name=Ozero News
@@ -17,11 +17,11 @@ upload.path=/Users/Denis/uploads
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
+spring.datasource.url=jdbc:mysql://localhost:3306/ozeronewsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql:///ozeronewsdb?cloudSqlInstance=ozeronews:europe-north1:ozerodb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=19ozero96
 spring.datasource.username=root
-#spring.datasource.password=20casystems19
-spring.datasource.password=19ozero96
+spring.datasource.password=20casystems19
+#spring.datasource.password=19ozero96
 
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
