add new resources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.http.port=8080
-server.port=8443
+#server.http.port=8080
+#server.port=8443
 
 #server.port=8080
 #website.baseURL=http://localhost:8080/
