add categories for resources and add control session

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -53,6 +53,7 @@ server.tomcat.protocol_header=x-forwarded-proto
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.timeout.seconds=3600
 # == Session control ==
 
 # -- Recaptcha --
