--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,17 @@
 		</dependency>
 		<!--== Security ==-->
 
+		<!--** Session **-->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
+		<!--== Security ==-->
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
