edit HEAD block

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,20 @@
 
 #server.port=8080
 #website.baseURL=http://localhost:8080/
-website.baseURL=https://ozeronews.appspot.com/
-website.name=Ozero News
-company.name=Ozero Media
 
+# -- ABOUT WEBSITE --
+company.name=Ozero Media
+website.name=Ozero News
+website.logo=/static/images/logo.png
+website.baseURL=https://ozeronews.appspot.com/
+website.description=Лента новостей в стране и мире от ведущих информационных агенств.
+
+article.collection.active=true
 article.collection.schedule=900000
 article.collection.count=5
 article.archive.day=10
 
-upload.path=/Users/Denis/uploads
+upload.path=uploads
 
 # -- Data Base configuration --
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
