edit email form

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,13 +2,14 @@
 #server.port=8443
 
 server.port=8080
-#website.baseURL=http://localhost:8080/
 
 # -- ABOUT WEBSITE --
 company.name=Ozero Media
 website.name=Ozero News
-website.logo=/static/images/logo.png
-website.baseURL=https://ozeronews.appspot.com/
+website.url=http://localhost:8080/
+website.logo=classpath:static/images/logo.png
+website.email.help=ozero.newsmedia@gmail.com
+website.email.support=ozero.newsmedia@gmail.com
 website.description=Лента новостей в стране и мире от ведущих информационных агенств.
 
 article.collection.active=false
@@ -94,7 +95,7 @@ spring.mail.password=nilbuiexfgzuvaoo
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=true
+mail.debug=false
 
 # -- YANDEX --
 #spring.mail.host=smtp.yandex.ru
