--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,7 +17,15 @@ article.collection.schedule=900000
 article.collection.count=5
 article.archive.day=10
 
-upload.path=/Users/Denis/uploads
+
+## MULTIPART (MultipartProperties)
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=2KB
+#spring.servlet.multipart.max-file-size=200MB
+#spring.servlet.multipart.max-request-size=215MB
+
+#upload.path=/Users/Denis/uploads
+upload.path=./uploads
 
 # -- Data Base configuration --
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
