--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,17 @@ website.email.support=ozero.newsmedia@gmail.com
 website.description=Лента новостей в стране и мире от ведущих информационных агенств.
 
 article.collection.active=true
-article.collection.schedule=900000
+article.collection.schedule=1200000
 article.collection.count=5
 article.archive.day=10
 
-upload.path=uploads
+## MULTIPART (MultipartProperties)
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=2KB
+#spring.servlet.multipart.max-file-size=200MB
+#spring.servlet.multipart.max-request-size=215MB
+
+upload.path=./uploads
 
 # -- Data Base configuration --
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
